--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -53,10 +53,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="/how-it-works">How It Works</a>
+                        <a class="nav-link" href="/howItWorks.html">How It Works</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/about-us">About Us</a>
+                        <a class="nav-link" href="/aboutUs.html">About Us</a>
                     </li>
                 </ul>
             </div>
