--- a/src/main/resources/templates/aboutUs.html
+++ b/src/main/resources/templates/aboutUs.html
@@ -8,6 +8,61 @@
 </head>
 <body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-HEYO
+
+<!--navbar-->
+<nav class="navbar navbar-nav" style="background-color: #37d370;">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">EZ Eats</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="/howItWorks.html">How It Works</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/aboutUs.html">About Us</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<!--Title-->
+<h1 class="text-center fs-2 mt-3" style = "Font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">
+    About Us
+</h1>
+
+<!--Subtitle-->
+<h2 class="text-center fs-4" style = "Font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">
+    Meet the creators!
+</h2>
+
+<!--Main body-->
+<!--Creating a container so I have margins-->
+<div class="container-flex mx-5 px-5 my-4">
+
+<h3 class="fs-5">
+    Isabel Su
+</h3>
+<p class="fs-6">
+    “I'm an inquisitive individual who values curiosity, creativity, and connection. I am excited to embark on this journey of learning and exploration, and I hope to make a positive impact along the way.”
+</p>
+
+<h3 class="fs-5">
+    Mahima Srivarshini
+</h3>
+<p class="fs-6">
+    “I have a deep appreciation for the great outdoors. Nature has a way of rejuvenating me and providing a sense of calm amidst the chaos of everyday life. Whether it's hiking through scenic trails or simply enjoying a quiet moment in a park, I find immense joy in the beauty of the natural world”.
+</p>
+
+<h3 class="fs-5">
+    Zoey Zhu
+</h3>
+<p class="fs-6">
+    “I am an open-minded individual. I love learning because it fills me with a genuine sense of wonder. I relish the chance to explore diverse subjects and disciplines and generally really enjoy them. Each area of knowledge offers unique insights and opportunities to deepen my understanding of the world. For instance, I learned that coding is beyond frustrating while creating this web app.”
+</p>
+</div>
 </body>
 </html>
