--- a/src/main/resources/templates/howItWorks.html
+++ b/src/main/resources/templates/howItWorks.html
@@ -8,6 +8,38 @@
 </head>
 <body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-HEY
+
+<!--navbar-->
+<nav class="navbar navbar-nav" style="background-color: #37d370;">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">EZ Eats</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" href="/howItWorks.html">How It Works</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/aboutUs.html">About Us</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<!--Title-->
+<h1 class="text-center fs-2 mt-3" style = "Font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">
+    How It Works
+</h1>
+
+<!--body-->
+<!--Creating a container so I have margins-->
+<div class="container-flex mx-5 px-5 my-4">
+<p class="fs-6">
+    EZ Eats is a service that develops customized nutrition plans for each user to promote a healthy lifestyle. Utilizing the user's goal, diet lifestyle, and physical characteristics, EZ Eats calculates a daily calorie intake value for the user. Using this information, EZ Eats creates a highly supportive daily meal plan consisting of several nutritious foods to allow users to reach optimal well being.
+</p>
+</div>
 </body>
 </html>
