made recipe link go to blank target

--- a/src/main/resources/templates/mealPlan.html
+++ b/src/main/resources/templates/mealPlan.html
@@ -16,7 +16,7 @@
       <p th:text="${map.key.getName()}"></p>
       <p th:text="${map.key.getCalories()} + ' calories per serving'"></p>
       <p th:text="${map.value} + ' serving(s)'"></p>
-      <a th:href="${map.key.getRecipe()}">Recipe</a>
+      <a th:href="${map.key.getRecipe()}" target="_blank">Recipe</a>
       <hr>
     </div>
   </div>
@@ -27,7 +27,7 @@
       <p th:text="${map.key.getName()}"></p>
       <p th:text="${map.key.getCalories()} + ' calories per serving'"></p>
       <p th:text="${map.value} + ' serving(s)'"></p>
-      <a th:href="${map.key.getRecipe()}">Recipe</a>
+      <a th:href="${map.key.getRecipe()}" target="_blank">Recipe</a>
       <hr>
     </div>
   </div>
@@ -38,7 +38,7 @@
       <p th:text="${map.key.getName()}"></p>
       <p th:text="${map.key.getCalories()} + ' calories per serving'"></p>
       <p th:text="${map.value} + ' serving(s)'"></p>
-      <a th:href="${map.key.getRecipe()}">Recipe</a>
+      <a th:href="${map.key.getRecipe()}" target="_blank">Recipe</a>
       <hr>
     </div>
   </div>
