--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,72 +2,29 @@
 <html  xmlns:th="http://www.w3.org/1999/xhtml" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>EZEats</title>
-    <meta name = "viewport" content="width=device-width, initial-scale=1">
+    <title>EZ Eats</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <script>
-        document.getElementById("calc").addEventListener("click", function() {
-            var message = "The form is incomplete. Please complete the form before trying to generate the meal plan.";
-
-            // check txt
-            var txts = document.querySelector('input[type="number"]');
-            for (var i = 0; i < txts.length; i++) {
-                if (txts[i]) {
-                    alert(message);
-                    break;
-                }
-            }
-            // check dropdown
-            var dropdown = document.getElementById("activitylevel").value;
-            if (dropdown === "") {
-                alert(message);
-            }
-            var dropdown2 = document.getElementById("pref").value;
-            if (dropdown2 === "") {
-                alert(message);
-            }
-
-            var dropdown3 = document.getElementById("goal").value;
-            if (dropdown3 === "") {
-                alert(message);
-            }
-
-            var dropdown4 = document.getElementById("gender").value;
-            if (dropdown4 === "") {
-                alert(message);
-            }
-        });
-    </script>
 
     <!--navbar-->
     <nav class="navbar navbar-nav" style="background-color: #37d370;">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">EZ Eats</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <div class="navbar" id="navbarSupportedContent">
+                <ul class="nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="/howItWorks.html">How It Works</a>
+                        <a class="nav-link" href="/howItWorks">How It Works</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/aboutUs.html">About Us</a>
+                        <a class="nav-link" href="/aboutUs">About Us</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-
-    <!--title-->
-    <h1 class="text-center fs-2 mt-3" style = "Font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">EZ Eats</h1>
-
-    <!--description-->
-    <h2 class="text-center fs-4" style = "Font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">A personalized diet builder</h2>
 
     <!--forms-->
     <form th:action="@{/diet}" th:object="${person}" method="post">
@@ -103,13 +60,13 @@
             <!--text input-->
             <div class="form-floating mb-sm-2">
                 <input type="number" class="form-control" th:field="*{weight}" id="weight" placeholder="Weight">
-                <label for="weight">Weight</label>
+                <label for="weight">Weight (lbs)</label>
             </div>
 
             <!--text input-->
             <div class="form-floating mb-sm-2">
                 <input type="number" class="form-control" th:field="*{bodyFat}" id="bodyFat" placeholder="Body-fat">
-                <label for="bodyFat">Body-fat</label>
+                <label for="bodyFat">Body-fat (%)</label>
             </div>
 
             <!--text input-->
