--- a/src/main/resources/static/bootstrap.css
+++ b/src/main/resources/static/bootstrap.css
@@ -4,6 +4,9 @@
  * Copyright 2011-2023 The Bootstrap Authors
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+
+/*Ignore all errors here b/c that's bootstrap's fault*/
+
 :root,
 [data-bs-theme=light] {
   --bs-blue: #0d6efd;
