--- a/src/main/resources/templates/mealPlan.html
+++ b/src/main/resources/templates/mealPlan.html
@@ -3,15 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <title>EZ Eats</title>
-  <link rel="stylesheet" href="../static/style.css">
   <meta name = "viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-  <h1>Today's Meal Plan</h1>
+
+  <!--navbar-->
+  <nav class="navbar navbar-nav" style="background-color: #37d370;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">EZ Eats</a>
+      <div class="navbar" id="navbarSupportedContent">
+        <ul class="nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="/howItWorks">How It Works</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/aboutUs">About Us</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!--Title-->
+  <h1 class="text-center fs-2 mt-3" style = "Font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">Today's Meal Plan</h1>
+
   <div class="container-flex mx-5">
-    <h2>Breakfast</h2>
+    <h2 class="fs-4" style = "Font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">Breakfast</h2>
     <div class="container-flex mx-4" th:each="map : ${breakfast}">
       <p th:text="${map.key.getName()}"></p>
       <p th:text="${map.key.getCalories()} + ' calories per serving'"></p>
@@ -22,7 +41,7 @@
   </div>
 
   <div class="container-flex mx-5">
-    <h2>Lunch</h2>
+    <h2 class="fs-4" style = "Font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">Lunch</h2>
     <div class="container-flex mx-4" th:each="map : ${lunch}">
       <p th:text="${map.key.getName()}"></p>
       <p th:text="${map.key.getCalories()} + ' calories per serving'"></p>
@@ -33,7 +52,7 @@
   </div>
 
   <div class="container-flex mx-5">
-    <h2>Dinner</h2>
+    <h2 class="fs-4" style = "Font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">Dinner</h2>
     <div class="container-flex mx-4" th:each="map : ${dinner}">
       <p th:text="${map.key.getName()}"></p>
       <p th:text="${map.key.getCalories()} + ' calories per serving'"></p>
