--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,10 +16,10 @@
             <div class="navbar" id="navbarSupportedContent">
                 <ul class="nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="/howItWorks">How It Works</a>
+                        <a class="nav-link" href="/howItWorks" style="color: white;">How It Works</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/aboutUs">About Us</a>
+                        <a class="nav-link" href="/aboutUs" style="color: white;">About Us</a>
                     </li>
                 </ul>
             </div>
