--- a/src/main/resources/templates/aboutUs.html
+++ b/src/main/resources/templates/aboutUs.html
@@ -10,19 +10,16 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
 <!--navbar-->
-<nav class="navbar navbar-nav" style="background-color: #37d370;">
+<nav class="navbar navbar-nav" style="background-color: #198753;">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">EZ Eats</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <a class="navbar-brand" href="/"><img src="/ez-eats-high-resolution-logo-color-on-transparent-background.png" alt="EZ-Eats Logo" width="200" height="70.7" class="d-inline-block align-text-top"></a>
+        <div class="navbar" id="navbarSupportedContent">
+            <ul class="nav nav-underline me-auto mb-2 mb-lg-0 fs-6">
                 <li class="nav-item">
-                    <a class="nav-link" href="/howItWorks">How It Works</a>
+                    <a class="nav-link" href="/howItWorks" style="color: white;">How It Works</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/aboutUs">About Us</a>
+                    <a class="nav-link" href="/aboutUs" style="color: white;">About Us</a>
                 </li>
             </ul>
         </div>
@@ -30,7 +27,7 @@
 </nav>
 
 <!--Title-->
-<h1 class="text-center fs-2 mt-3" style = "Font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">
+<h1 class="text-center fs-2 mt-3" style="Font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">
     About Us
 </h1>
 
