--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,16 +5,17 @@
     <title>EZ Eats</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="icon" type="image/x-icon" href="/ez-eats-website-favicon-color.png">
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
     <!--navbar-->
-    <nav class="navbar navbar-nav" style="background-color: #37d370;">
+    <nav class="navbar navbar-nav" style="background-color: #198753;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">EZ Eats</a>
+            <a class="navbar-brand" href="/"><img src="/ez-eats-high-resolution-logo-color-on-transparent-background.png" alt="EZ-Eats Logo" width="200" height="70.7" class="d-inline-block align-text-top"></a>
             <div class="navbar" id="navbarSupportedContent">
-                <ul class="nav me-auto mb-2 mb-lg-0">
+                <ul class="nav nav-underline me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link" href="/howItWorks" style="color: white;">How It Works</a>
                     </li>
@@ -25,6 +26,9 @@
             </div>
         </div>
     </nav>
+
+    <!--heading-->
+    <h2 class="text-center fs-2 mt-3" style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">Generate a Meal Plan</h2>
 
     <!--forms-->
     <form th:action="@{/diet}" th:object="${person}" method="post">
@@ -84,7 +88,7 @@
                 </select>
             </div>
             <div class="mb-sm-2 text-center">
-                <input class="btn btn-primary" id="calc" type="submit" value="Calculate"  style="background-color: #19B550;">
+                <input class="btn btn-primary" id="calc" type="submit" value="Generate"  style="background-color: #198753;">
             </div>
         </div>
     </form>
