--- a/src/main/resources/templates/mealPlan.html
+++ b/src/main/resources/templates/mealPlan.html
@@ -10,16 +10,16 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
   <!--navbar-->
-  <nav class="navbar navbar-nav" style="background-color: #37d370;">
+  <nav class="navbar navbar-nav" style="background-color: #198753;">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">EZ Eats</a>
+      <a class="navbar-brand" href="/"><img src="/ez-eats-high-resolution-logo-color-on-transparent-background.png" alt="EZ-Eats Logo" width="200" height="70.7" class="d-inline-block align-text-top"></a>
       <div class="navbar" id="navbarSupportedContent">
-        <ul class="nav me-auto mb-2 mb-lg-0">
+        <ul class="nav nav-underline me-auto mb-2 mb-lg-0 fs-6">
           <li class="nav-item">
-            <a class="nav-link" href="/howItWorks">How It Works</a>
+            <a class="nav-link" href="/howItWorks" style="color: white;">How It Works</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/aboutUs">About Us</a>
+            <a class="nav-link" href="/aboutUs" style="color: white;">About Us</a>
           </li>
         </ul>
       </div>
@@ -27,38 +27,50 @@
   </nav>
 
   <!--Title-->
-  <h1 class="text-center fs-2 mt-3" style = "Font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">Today's Meal Plan</h1>
+  <h1 class="text-center fs-2 mt-3" style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">Today's Meal Plan</h1>
 
-  <div class="container-flex mx-5">
-    <h2 class="fs-4" style = "Font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">Breakfast</h2>
-    <div class="container-flex mx-4" th:each="map : ${breakfast}">
-      <p th:text="${map.key.getName()}"></p>
-      <p th:text="${map.key.getCalories()} + ' calories per serving'"></p>
-      <p th:text="${map.value} + ' serving(s)'"></p>
-      <a th:href="${map.key.getRecipe()}" target="_blank">Recipe</a>
-      <hr>
+  <!--breakfast-->
+  <div class="d-grid gap-2 col-6 mx-auto my-4">
+    <button class="btn btn-outline-success" type="button" data-bs-toggle="collapse" data-bs-target="#breakfast" aria-expanded="false" aria-controls="collapseExample">
+      Breakfast
+    </button>
+  </div>
+  <div class="collapse" id="breakfast">
+      <div class="card card-body container-flex mx-5 my-3" th:each="map : ${breakfast}">
+        <p th:text="${map.key.getName()}"></p>
+        <p th:text="${map.key.getCalories()} + ' calories per serving'"></p>
+        <p th:text="${map.value} + ' serving(s)'"></p>
+        <a th:href="${map.key.getRecipe()}" target="_blank" style="color: #198753;">Recipe</a>
     </div>
   </div>
 
-  <div class="container-flex mx-5">
-    <h2 class="fs-4" style = "Font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">Lunch</h2>
-    <div class="container-flex mx-4" th:each="map : ${lunch}">
+  <!--lunch-->
+  <div class="d-grid gap-2 col-6 mx-auto my-4">
+    <button class="btn btn-outline-success" type="button" data-bs-toggle="collapse" data-bs-target="#lunch" aria-expanded="false" aria-controls="collapseExample">
+      Lunch
+    </button>
+  </div>
+  <div class="collapse" id="lunch">
+    <div class="card card-body container-flex mx-5 my-3" th:each="map : ${lunch}">
       <p th:text="${map.key.getName()}"></p>
       <p th:text="${map.key.getCalories()} + ' calories per serving'"></p>
       <p th:text="${map.value} + ' serving(s)'"></p>
-      <a th:href="${map.key.getRecipe()}" target="_blank">Recipe</a>
-      <hr>
+      <a th:href="${map.key.getRecipe()}" target="_blank" style="color: #198753;">Recipe</a>
     </div>
   </div>
 
-  <div class="container-flex mx-5">
-    <h2 class="fs-4" style = "Font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">Dinner</h2>
-    <div class="container-flex mx-4" th:each="map : ${dinner}">
+  <!--dinner-->
+  <div class="d-grid gap-2 col-6 mx-auto my-4">
+    <button class="btn btn-outline-success" type="button" data-bs-toggle="collapse" data-bs-target="#dinner" aria-expanded="false" aria-controls="collapseExample">
+      Dinner
+    </button>
+  </div>
+  <div class="collapse" id="dinner">
+    <div class="card card-body container-flex mx-5 my-3" th:each="map : ${dinner}">
       <p th:text="${map.key.getName()}"></p>
       <p th:text="${map.key.getCalories()} + ' calories per serving'"></p>
       <p th:text="${map.value} + ' serving(s)'"></p>
-      <a th:href="${map.key.getRecipe()}" target="_blank">Recipe</a>
-      <hr>
+      <a th:href="${map.key.getRecipe()}" target="_blank" style="color: #198753;">Recipe</a>
     </div>
   </div>
 </body>
