--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="/"><img src="/ez-eats-high-resolution-logo-color-on-transparent-background.png" alt="EZ-Eats Logo" width="200" height="70.7" class="d-inline-block align-text-top"></a>
             <div class="navbar" id="navbarSupportedContent">
-                <ul class="nav nav-underline me-auto mb-2 mb-lg-0">
+                <ul class="nav nav-underline me-auto mb-2 mb-lg-0 fs-5">
                     <li class="nav-item">
                         <a class="nav-link" href="/howItWorks" style="color: white;">How It Works</a>
                     </li>
