--- a/src/main/resources/templates/aboutUs.html
+++ b/src/main/resources/templates/aboutUs.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>EZ Eats - About Us</title>
+    <link rel="icon" type="image/x-icon" href="/ez-eats-website-favicon-color.png">
     <meta name = "viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
@@ -27,14 +28,14 @@
 </nav>
 
 <!--Title-->
-<h1 class="text-center fs-2 mt-3" style="Font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">
+<h2 class="text-center fs-2 mt-3" style="Font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">
     About Us
-</h1>
+</h2>
 
 <!--Subtitle-->
-<h2 class="text-center fs-4" style = "Font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">
+<h3 class="text-center fs-4" style = "Font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">
     Meet the creators!
-</h2>
+</h3>
 
 <!--Main body-->
 <!--Creating a container so I have margins-->
