Added Achievements section under each name.

--- a/src/main/resources/templates/aboutUs.html
+++ b/src/main/resources/templates/aboutUs.html
@@ -47,6 +47,14 @@
 <p class="fs-6">
     “I'm an inquisitive individual who values curiosity, creativity, and connection. I am excited to embark on this journey of learning and exploration, and I hope to make a positive impact along the way.”
 </p>
+    <p class="fw-medium">
+        Achievements:
+    </p>
+    <ul>
+        <li>Completed the Harvard CS50 Intro to Computer Science Course</li>
+        <li>Completed the AP CSA Course and Exam</li>
+        <li>This is her third Web Application created (first one in Java).</li>
+    </ul>
 
 <h3 class="fs-5">
     Mahima Srivarshini
@@ -54,6 +62,13 @@
 <p class="fs-6">
     “I have a deep appreciation for the great outdoors. Nature has a way of rejuvenating me and providing a sense of calm amidst the chaos of everyday life. Whether it's hiking through scenic trails or simply enjoying a quiet moment in a park, I find immense joy in the beauty of the natural world”.
 </p>
+    <p class="fw-medium">
+        Achievements:
+    </p>
+    <ul>
+        <li>Completed the AP CSA Course and Exam</li>
+        <li>This is her first Web Application created.</li>
+    </ul>
 
 <h3 class="fs-5">
     Zoey Zhu
@@ -61,6 +76,14 @@
 <p class="fs-6">
     “I am an open-minded individual. I love learning because it fills me with a genuine sense of wonder. I relish the chance to explore diverse subjects and disciplines and generally really enjoy them. Each area of knowledge offers unique insights and opportunities to deepen my understanding of the world. For instance, I learned that coding is beyond frustrating while creating this web app.”
 </p>
+    <p class="fw-medium">
+        Achievements:
+    </p>
+    <ul>
+        <li>Completed the Computer Science Principles Course.</li>
+        <li>Completed the AP CSA Course and Exam</li>
+        <li>This is her second Web Application created (first in Java).</li>
+    </ul>
 </div>
 </body>
 </html>
