Added Achievements and Zoey image.

--- a/src/main/resources/templates/aboutUs.html
+++ b/src/main/resources/templates/aboutUs.html
@@ -73,9 +73,14 @@
 <h3 class="fs-5">
     Zoey Zhu
 </h3>
-<p class="fs-6">
-    “I am an open-minded individual. I love learning because it fills me with a genuine sense of wonder. I relish the chance to explore diverse subjects and disciplines and generally really enjoy them. Each area of knowledge offers unique insights and opportunities to deepen my understanding of the world. For instance, I learned that coding is beyond frustrating while creating this web app.”
-</p>
+    <div class="container-flex">
+        <div class="col-9">
+            <p class="fs-6">
+                “I am an open-minded individual. I love learning because it<img src="/zoey-photo.jpg" alt="Picture of Zoey" style="width:25%;height:auto;">
+                fills me with a genuine sense of wonder. I relish the chance to explore diverse subjects and disciplines and generally really enjoy them. Each area of knowledge offers unique insights and opportunities to deepen my understanding of the world. For instance, I learned that coding is beyond frustrating while creating this web app.”
+            </p>
+        </div>
+    </div>
     <p class="fw-medium">
         Achievements:
     </p>
