--- a/src/main/resources/templates/aboutUs.html
+++ b/src/main/resources/templates/aboutUs.html
@@ -41,49 +41,64 @@
 <!--Creating a container so I have margins-->
 <div class="container-flex mx-5 px-5 my-4">
 
+<!--Isabel-->
+<!--Title-->
 <h3 class="fs-5">
     Isabel Su
 </h3>
+<!--Personal Quote-->
 <p class="fs-6">
     “I'm an inquisitive individual who values curiosity, creativity, and connection. I am excited to embark on this journey of learning and exploration, and I hope to make a positive impact along the way.”
 </p>
+<!--Achievements-->
     <p class="fw-medium">
         Achievements:
     </p>
+<!--Achievements list-->
     <ul>
         <li>Completed the Harvard CS50 Intro to Computer Science Course</li>
         <li>Completed the AP CSA Course and Exam</li>
         <li>This is her third Web Application created (first one in Java).</li>
     </ul>
 
+<!--Mahima-->
+<!--Title-->
 <h3 class="fs-5">
     Mahima Srivarshini
 </h3>
+<!--Personal Quote-->
 <p class="fs-6">
     “I have a deep appreciation for the great outdoors. Nature has a way of rejuvenating me and providing a sense of calm amidst the chaos of everyday life. Whether it's hiking through scenic trails or simply enjoying a quiet moment in a park, I find immense joy in the beauty of the natural world”.
 </p>
+<!--Achievements-->
     <p class="fw-medium">
         Achievements:
     </p>
+<!--Achievements list-->
     <ul>
         <li>Completed the AP CSA Course and Exam</li>
         <li>This is her first Web Application created.</li>
     </ul>
 
+<!--Zoey-->
+<!--Title-->
 <h3 class="fs-5">
     Zoey Zhu
 </h3>
     <div class="container-flex">
         <div class="col-9">
+            <!--Personal Quote-->
             <p class="fs-6">
                 “I am an open-minded individual. I love learning because it<img src="/zoey-photo.jpg" alt="Picture of Zoey" style="width:25%;height:auto;">
                 fills me with a genuine sense of wonder. I relish the chance to explore diverse subjects and disciplines and generally really enjoy them. Each area of knowledge offers unique insights and opportunities to deepen my understanding of the world. For instance, I learned that coding is beyond frustrating while creating this web app.”
             </p>
         </div>
     </div>
+    <!--Achievements-->
     <p class="fw-medium">
         Achievements:
     </p>
+    <!--Achievements list-->
     <ul>
         <li>Completed the Computer Science Principles Course.</li>
         <li>Completed the AP CSA Course and Exam</li>
