--- a/src/main/resources/templates/howItWorks.html
+++ b/src/main/resources/templates/howItWorks.html
@@ -35,6 +35,7 @@
 <!--body-->
 <!--Creating a container so I have margins-->
 <div class="container-flex mx-5 px-5 my-4">
+<!--Main text-->
 <p class="fs-6">
     EZ Eats is a service that develops customized nutrition plans for each user to promote a healthy lifestyle. Utilizing the user's goal, diet lifestyle, and physical characteristics, EZ Eats calculates a daily calorie intake value for the user. Using this information, EZ Eats creates a highly supportive daily meal plan consisting of several nutritious foods to allow users to reach optimal well being.
 </p>
