--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -7,8 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
+    <!--Error Message-->
     <h1>Something Went Wrong...</h1>
-    <a class="btn btn-primary" href="/" role="button">Go Home</a>
+    <!--Go home button-->
+    <a class="btn btn-primary" href="/" role="button" style="background-color: #198753;">Go Home</a>
+    <!--status-->
     <p>Status code: <span th:text="${status}"></span></p>
 </body>
 </html>
