fixed pics in aboutUs.html

--- a/src/main/resources/templates/aboutUs.html
+++ b/src/main/resources/templates/aboutUs.html
@@ -38,57 +38,68 @@
 </h3>
 
 <!--Main body-->
-<!--Creating a container so I have margins-->
 <div class="container-flex mx-5 px-5 my-4">
-
-<h3 class="fs-5">
-    Isabel Su
-</h3>
-<p class="fs-6">
-    “I'm an inquisitive individual who values curiosity, creativity, and connection. I am excited to embark on this journey of learning and exploration, and I hope to make a positive impact along the way.”
-</p>
-    <p class="fw-medium">
-        Achievements:
-    </p>
-    <ul>
-        <li>Completed the Harvard CS50 Intro to Computer Science Course</li>
-        <li>Completed the AP CSA Course and Exam</li>
-        <li>This is her third Web Application created (first one in Java).</li>
-    </ul>
-
-<h3 class="fs-5">
-    Mahima Srivarshini
-</h3>
-<p class="fs-6">
-    “I have a deep appreciation for the great outdoors. Nature has a way of rejuvenating me and providing a sense of calm amidst the chaos of everyday life. Whether it's hiking through scenic trails or simply enjoying a quiet moment in a park, I find immense joy in the beauty of the natural world”.
-</p>
-    <p class="fw-medium">
-        Achievements:
-    </p>
-    <ul>
-        <li>Completed the AP CSA Course and Exam</li>
-        <li>This is her first Web Application created.</li>
-    </ul>
-
-<h3 class="fs-5">
-    Zoey Zhu
-</h3>
-    <div class="container-flex">
-        <div class="col-9">
+    <!--isabel-->
+    <h3 class="fs-5">
+        Isabel Su
+    </h3>
+    <div class="col-12 d-flex flex-row mb-3">
+        <div class="col-8">
             <p class="fs-6">
-                “I am an open-minded individual. I love learning because it<img src="/zoey-photo.jpg" alt="Picture of Zoey" style="width:25%;height:auto;">
-                fills me with a genuine sense of wonder. I relish the chance to explore diverse subjects and disciplines and generally really enjoy them. Each area of knowledge offers unique insights and opportunities to deepen my understanding of the world. For instance, I learned that coding is beyond frustrating while creating this web app.”
+               “In the boundless realm of existence, I thrive amidst the tapestry of knowledge and the depths of human experience. Fueled by an unquenchable curiosity, I embark on a journey of self-discovery and growth. Driven by a relentless pursuit of excellence, I challenge the norm and strive to make a positive impact. Embracing life's mosaic of emotions and connections, I weave my unique story, leaving an indelible mark on the world we inhabit.”
             </p>
+            <p class="fw-medium">
+                Achievements:
+            </p>
+            <ul>
+                <li>Completed the Harvard CS50 Intro to Computer Science Course</li>
+                <li>Completed the AP CSA Course and Exam</li>
+                <li>This is her third Web Application created (first one in Java).</li>
+            </ul>
         </div>
+        <img src="/isabel-photo.jpeg" class="rounded float-end img-thumbnail col-4 px-2 py-2" alt="isabel photo">
     </div>
-    <p class="fw-medium">
-        Achievements:
-    </p>
-    <ul>
-        <li>Completed the Computer Science Principles Course.</li>
-        <li>Completed the AP CSA Course and Exam</li>
-        <li>This is her second Web Application created (first in Java).</li>
-    </ul>
+
+    <!--mahima-->
+    <h3 class="fs-5">
+        Mahima Srivarshini
+    </h3>
+    <div class="col-12 d-flex flex-row mb-3">
+        <div class="col-8">
+            <p class="fs-6">
+                “I have a deep appreciation for the great outdoors. Nature has a way of rejuvenating me and providing a sense of calm amidst the chaos of everyday life. Whether it's hiking through scenic trails or simply enjoying a quiet moment in a park, I find immense joy in the beauty of the natural world”.
+            </p>
+            <p class="fw-medium">
+                Achievements:
+            </p>
+            <ul>
+                <li>Completed the AP CSA Course and Exam</li>
+                <li>This is her first Web Application created.</li>
+            </ul>
+        </div>
+        <img src="/mahima-photo.jpg" class="rounded float-end img-thumbnail col-4 px-2 py-2" alt="mahima photo">
+    </div>
+
+    <!--zoey-->
+    <h3 class="fs-5">
+        Zoey Zhu
+    </h3>
+    <div class="col-12 d-flex flex-row mb-3">
+        <div class="col-8">
+            <p class="fs-6">
+                “I am an open-minded individual. I love learning because it fills me with a genuine sense of wonder. I relish the chance to explore diverse subjects and disciplines and generally really enjoy them. Each area of knowledge offers unique insights and opportunities to deepen my understanding of the world. For instance, I learned that coding is beyond frustrating while creating this web app.”
+            </p>
+            <p class="fw-medium">
+                Achievements:
+            </p>
+            <ul>
+                <li>Completed the Computer Science Principles Course.</li>
+                <li>Completed the AP CSA Course and Exam</li>
+                <li>This is her second Web Application created (first in Java).</li>
+            </ul>
+        </div>
+        <img src="/zoey-photo.jpg" class="rounded float-end img-thumbnail col-4 px-2 py-2" alt="zoey photo">
+    </div>
 </div>
 </body>
 </html>
