--- a/src/main/resources/templates/aboutUs.html
+++ b/src/main/resources/templates/aboutUs.html
@@ -101,5 +101,29 @@
         <img src="/zoey-photo.jpg" class="rounded float-end img-thumbnail col-4 px-2 py-2" alt="zoey photo">
     </div>
 </div>
+
+<!--Footer-->
+<div class="container-fluid">
+    <!-- Footer -->
+    <footer class="text-center text-lg-start text-dark" style="background-color: #ECEFF1">
+        <section class="d-flex justify-content-between p-4 text-white" style="background-color: #198753">
+            <div class="me-5">
+                <span>EZ-Eats created by Mahima S, Isabel S, and Zoey Z</span>
+                <p>
+                    Not to be used for medical advice.
+                </p>
+            </div>
+        </section>
+
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+            © 2023 Copyright:
+            <p class="text-dark">EZ-Eats.com</p>
+        </div>
+        <!-- Copyright -->
+    </footer>
+    <!-- Footer -->
+</div>
+<!-- End of .container -->
 </body>
 </html>
