--- a/src/main/resources/templates/aboutUs.html
+++ b/src/main/resources/templates/aboutUs.html
@@ -8,122 +8,114 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
-<!--navbar-->
-<nav class="navbar navbar-nav" style="background-color: #198753;">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/"><img src="/ez-eats-high-resolution-logo-color-on-transparent-background.png" alt="EZ-Eats Logo" width="200" height="70.7" class="d-inline-block align-text-top"></a>
-        <div class="navbar" id="navbarSupportedContent">
-            <ul class="nav nav-underline me-auto mb-2 mb-lg-0 fs-5">
-                <li class="nav-item">
-                    <a class="nav-link" href="/howItWorks" style="color: white;">How It Works</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/aboutUs" style="color: white;">About Us</a>
-                </li>
-            </ul>
+    <!--navbar-->
+    <nav class="navbar navbar-nav" style="background-color: #198753;">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/"><img src="/ez-eats-high-resolution-logo-color-on-transparent-background.png" alt="EZ-Eats Logo" width="200" height="70.7" class="d-inline-block align-text-top"></a>
+            <div class="navbar" id="navbarSupportedContent">
+                <ul class="nav nav-underline me-auto mb-2 mb-lg-0 fs-5">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/howItWorks" style="color: white;">How It Works</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/aboutUs" style="color: white;">About Us</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
 
-<!--Title-->
-<h2 class="text-center fs-2 mt-3" style="Font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">
-    About Us
-</h2>
+    <!--Title-->
+    <h2 class="text-center fs-2 mt-3" style="Font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">
+        About Us
+    </h2>
 
-<!--Subtitle-->
-<h3 class="text-center fs-4" style = "Font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">
-    Meet the creators!
-</h3>
-
-<!--Main body-->
-<div class="container-flex mx-5 px-5 my-4">
-    <!--isabel-->
-    <h3 class="fs-5">
-        Isabel Su
+    <!--Subtitle-->
+    <h3 class="text-center fs-4" style = "Font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif">
+        Meet the creators!
     </h3>
-    <div class="col-12 d-flex flex-row mb-3">
-        <div class="col-8">
-            <p class="fs-6">
-               “In the boundless realm of existence, I thrive amidst the tapestry of knowledge and the depths of human experience. Fueled by an unquenchable curiosity, I embark on a journey of self-discovery and growth. Driven by a relentless pursuit of excellence, I challenge the norm and strive to make a positive impact. Embracing life's mosaic of emotions and connections, I weave my unique story, leaving an indelible mark on the world we inhabit.”
-            </p>
-            <p class="fw-medium">
-                Achievements:
-            </p>
-            <ul>
-                <li>Completed the Harvard CS50 Intro to Computer Science Course</li>
-                <li>Completed the AP CSA Course and Exam</li>
-                <li>This is her third Web Application created (first one in Java).</li>
-            </ul>
-        </div>
-        <img src="/isabel-photo.jpeg" class="rounded float-end img-thumbnail col-4 px-2 py-2" alt="isabel photo">
-    </div>
 
-    <!--mahima-->
-    <h3 class="fs-5">
-        Mahima Srivarshini
-    </h3>
-    <div class="col-12 d-flex flex-row mb-3">
-        <div class="col-8">
-            <p class="fs-6">
-                “I have a deep appreciation for the great outdoors. Nature has a way of rejuvenating me and providing a sense of calm amidst the chaos of everyday life. Whether it's hiking through scenic trails or simply enjoying a quiet moment in a park, I find immense joy in the beauty of the natural world”.
-            </p>
-            <p class="fw-medium">
-                Achievements:
-            </p>
-            <ul>
-                <li>Completed the AP CSA Course and Exam</li>
-                <li>This is her first Web Application created.</li>
-            </ul>
-        </div>
-        <img src="/mahima-photo.jpg" class="rounded float-end img-thumbnail col-4 px-2 py-2" alt="mahima photo">
-    </div>
-
-    <!--zoey-->
-    <h3 class="fs-5">
-        Zoey Zhu
-    </h3>
-    <div class="col-12 d-flex flex-row mb-3">
-        <div class="col-8">
-            <p class="fs-6">
-                “I am an open-minded individual. I love learning because it fills me with a genuine sense of wonder. I relish the chance to explore diverse subjects and disciplines and generally really enjoy them. Each area of knowledge offers unique insights and opportunities to deepen my understanding of the world. For instance, I learned that coding is beyond frustrating while creating this web app.”
-            </p>
-            <p class="fw-medium">
-                Achievements:
-            </p>
-            <ul>
-                <li>Completed the Computer Science Principles Course.</li>
-                <li>Completed the AP CSA Course and Exam</li>
-                <li>This is her second Web Application created (first in Java).</li>
-            </ul>
-        </div>
-        <img src="/zoey-photo.jpg" class="rounded float-end img-thumbnail col-4 px-2 py-2" alt="zoey photo">
-    </div>
-</div>
-
-<!--Footer-->
-<div class="container-fluid">
-    <!-- Footer -->
-    <footer class="text-center text-lg-start text-dark" style="background-color: #ECEFF1">
-        <section class="d-flex justify-content-between p-4 text-white" style="background-color: #198753">
-            <div class="me-5">
-                <span>EZ-Eats created by Mahima S, Isabel S, and Zoey Z</span>
-                <p>
-                    Not to be used for medical advice.
+    <!--Main body-->
+    <div class="container-flex mx-5 px-5 my-4">
+        <!--isabel-->
+        <h3 class="fs-5">
+            Isabel Su
+        </h3>
+        <div class="col-12 d-flex flex-row mb-3">
+            <div class="col-8">
+                <p class="fs-6">
+                   “In the boundless realm of existence, I thrive amidst the tapestry of knowledge and the depths of human experience. Fueled by an unquenchable curiosity, I embark on a journey of self-discovery and growth. Driven by a relentless pursuit of excellence, I challenge the norm and strive to make a positive impact. Embracing life's mosaic of emotions and connections, I weave my unique story, leaving an indelible mark on the world we inhabit.”
                 </p>
+                <p class="fw-medium">
+                    Achievements:
+                </p>
+                <ul>
+                    <li>Completed the Harvard CS50 Intro to Computer Science Course</li>
+                    <li>Completed the AP CSA Course and Exam</li>
+                    <li>This is her third Web Application created (first one in Java).</li>
+                </ul>
+            </div>
+            <img src="/isabel-photo.jpeg" class="rounded float-end img-thumbnail col-4 px-2 py-2" alt="isabel photo">
+        </div>
+
+        <!--mahima-->
+        <h3 class="fs-5">
+            Mahima Srivarshini
+        </h3>
+        <div class="col-12 d-flex flex-row mb-3">
+            <div class="col-8">
+                <p class="fs-6">
+                    “I have a deep appreciation for the great outdoors. Nature has a way of rejuvenating me and providing a sense of calm amidst the chaos of everyday life. Whether it's hiking through scenic trails or simply enjoying a quiet moment in a park, I find immense joy in the beauty of the natural world”.
+                </p>
+                <p class="fw-medium">
+                    Achievements:
+                </p>
+                <ul>
+                    <li>Completed the AP CSA Course and Exam</li>
+                    <li>This is her first Web Application created.</li>
+                </ul>
+            </div>
+            <img src="/mahima-photo.jpg" class="rounded float-end img-thumbnail col-4 px-2 py-2" alt="mahima photo">
+        </div>
+
+        <!--zoey-->
+        <h3 class="fs-5">
+            Zoey Zhu
+        </h3>
+        <div class="col-12 d-flex flex-row mb-3">
+            <div class="col-8">
+                <p class="fs-6">
+                    “I am an open-minded individual. I love learning because it fills me with a genuine sense of wonder. I relish the chance to explore diverse subjects and disciplines and generally really enjoy them. Each area of knowledge offers unique insights and opportunities to deepen my understanding of the world. For instance, I learned that coding is beyond frustrating while creating this web app.”
+                </p>
+                <p class="fw-medium">
+                    Achievements:
+                </p>
+                <ul>
+                    <li>Completed the Computer Science Principles Course.</li>
+                    <li>Completed the AP CSA Course and Exam</li>
+                    <li>This is her second Web Application created (first in Java).</li>
+                </ul>
+            </div>
+            <img src="/zoey-photo.jpg" class="rounded float-end img-thumbnail col-4 px-2 py-2" alt="zoey photo">
+        </div>
+    </div>
+
+    <!--Footer-->
+    <footer class="text-start text-lg-start text-dark" style="background-color: #ECEFF1">
+        <section class="d-flex col-12 justify-content-around p-2 text-white" style="background-color: #198753; font-size: .8rem;">
+            <img src="/ez-eats-high-resolution-logo-color-on-transparent-background.png" alt="EZ-Eats Logo" width="142.857142857" height="50.5" class="d-inline-block align-text-top">
+            <div class="col-3">
+                Designed and built with all the love in the world by the EZ Eats team with a shared vision to revolutionize the way we experience food and nourish our bodies.
+            </div>
+            <div class="col-3">
+                <span>EZ-Eats created by Mahima S, Isabel S, and Zoey Z<br>Not to be used for medical advice.</span>
+            </div>
+            <div class="col-3">
+                &copy;2023 EZ Eats, inc. All rights reserved.
             </div>
         </section>
-
-        <!-- Copyright -->
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-            © 2023 Copyright:
-            <p class="text-dark">EZ-Eats.com</p>
-        </div>
-        <!-- Copyright -->
     </footer>
-    <!-- Footer -->
-</div>
-<!-- End of .container -->
 </body>
 </html>
