--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -92,5 +92,21 @@
             </div>
         </div>
     </form>
+
+    <!--footer-->
+    <footer class="text-start text-lg-start text-dark" style="background-color: #ECEFF1">
+        <section class="d-flex col-12 justify-content-around p-2 text-white" style="background-color: #198753; font-size: .8rem;">
+            <img src="/ez-eats-high-resolution-logo-color-on-transparent-background.png" alt="EZ-Eats Logo" width="142.857142857" height="50.5" class="d-inline-block align-text-top">
+            <div class="col-3">
+                Designed and built with all the love in the world by the EZ Eats team with a shared vision to revolutionize the way we experience food and nourish our bodies.
+            </div>
+            <div class="col-3">
+                <span>EZ-Eats created by Mahima S, Isabel S, and Zoey Z<br>Not to be used for medical advice.</span>
+            </div>
+            <div class="col-3">
+                &copy;2023 EZ Eats, inc. All rights reserved.
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
