--- a/src/main/resources/templates/mealPlan.html
+++ b/src/main/resources/templates/mealPlan.html
@@ -79,7 +79,7 @@
   </div>
 
   <!--footer-->
-  <footer class="text-start text-lg-start text-dark fixed-bottom" style="background-color: #ECEFF1">
+  <footer class="text-start text-lg-start text-dark sticky-bottom" style="background-color: #ECEFF1">
     <section class="d-flex col-12 justify-content-around p-2 text-white" style="background-color: #198753; font-size: .8rem;">
       <img src="/ez-eats-high-resolution-logo-color-on-transparent-background.png" alt="EZ-Eats Logo" width="142.857142857" height="50.5" class="d-inline-block align-text-top">
       <div class="col-3">
